@@ -1,5 +1,11 @@
 2000-06-17  H.J. Lu  <hjl@gnu.org>
 
+	* getopt.h: Updated from gcc.
+	* libiberty.h: Likewise.
+	* symcat.h: Likewise.
+
+2000-06-17  H.J. Lu  <hjl@gnu.org>
+
 	* ansidecl.h: Updated from gcc.
 
 2000-06-15  H.J. Lu  <hjl@gnu.org>
